Have phpcraft.de redirect to this repo

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://phpcraft.de/docs/">
+<meta http-equiv="refresh" content="0;url=https://github.com/timmyrs/Phpcraft">
