--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://github.com/timmyrs/Phpcraft">
+<meta content="0;url=https://github.com/timmyrs/Phpcraft" http-equiv="refresh">
